# Advent-of-Code

./: .gitignore  README.md  flake.nix
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/utils/: grid.rs  point.rs
