[[bin]]
name = "year2020_day1"
path = "src/bin/year2020_day1.rs"

[[bin]]
name = "year2020_day2"
path = "src/bin/year2020_day2.rs"

[[bin]]
name = "year2020_day3"
path = "src/bin/year2020_day3.rs"

[[bin]]
name = "year2020_day4"
path = "src/bin/year2020_day4.rs"

[[bin]]
name = "year2020_day5"
path = "src/bin/year2020_day5.rs"

[[bin]]
name = "year2020_day6"
path = "src/bin/year2020_day6.rs"

[package]
name = "aocsuite"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[dependencies.clap]
version = "4.5.4"
features = [ "derive",]
