[[bin]]
name = "year2020_day1"
path = "src/bin/year2020_day1.rs"

[[bin]]
name = "year2020_day2"
path = "src/bin/year2020_day2.rs"

[[bin]]
name = "year2020_day3"
path = "src/bin/year2020_day3.rs"

[[bin]]
name = "year2020_day4"
path = "src/bin/year2020_day4.rs"

[[bin]]
name = "year2020_day5"
path = "src/bin/year2020_day5.rs"

[[bin]]
name = "year2020_day6"
path = "src/bin/year2020_day6.rs"

[[bin]]
name = "year2020_day7"
path = "src/bin/year2020_day7.rs"

[[bin]]
name = "year2020_day8"
path = "src/bin/year2020_day8.rs"

[[bin]]
name = "year2020_day9"
path = "src/bin/year2020_day9.rs"

[[bin]]
name = "year2020_day10"
path = "src/bin/year2020_day10.rs"

[[bin]]
name = "year2020_day11"
path = "src/bin/year2020_day11.rs"

[[bin]]
name = "year2020_day12"
path = "src/bin/year2020_day12.rs"

[[bin]]
name = "year2020_day13"
path = "src/bin/year2020_day13.rs"

[[bin]]
name = "year2020_day14"
path = "src/bin/year2020_day14.rs"

[[bin]]
name = "year2020_day15"
path = "src/bin/year2020_day15.rs"

[[bin]]
name = "year2020_day16"
path = "src/bin/year2020_day16.rs"

[[bin]]
name = "year2020_day17"
path = "src/bin/year2020_day17.rs"

[[bin]]
name = "year2020_day18"
path = "src/bin/year2020_day18.rs"

[[bin]]
name = "year2020_day19"
path = "src/bin/year2020_day19.rs"

[[bin]]
name = "year2020_day20"
path = "src/bin/year2020_day20.rs"

[[bin]]
name = "year2020_day21"
path = "src/bin/year2020_day21.rs"

[[bin]]
name = "year2020_day22"
path = "src/bin/year2020_day22.rs"

[[bin]]
name = "year2020_day23"
path = "src/bin/year2020_day23.rs"

[[bin]]
name = "year2020_day24"
path = "src/bin/year2020_day24.rs"

[[bin]]
name = "year2020_day25"
path = "src/bin/year2020_day25.rs"

[[bin]]
name = "year2024_day1"
path = "src/bin/year2024_day1.rs"

[[bin]]
name = "year2023_day1"
path = "src/bin/year2023_day1.rs"

[[bin]]
name = "year2024_day2"
path = "src/bin/year2024_day2.rs"

[[bin]]
name = "year2024_day3"
path = "src/bin/year2024_day3.rs"

[[bin]]
name = "year2024_day4"
path = "src/bin/year2024_day4.rs"

[[bin]]
name = "year2024_day5"
path = "src/bin/year2024_day5.rs"

[[bin]]
name = "year2024_day6"
path = "src/bin/year2024_day6.rs"

[[bin]]
name = "year2024_day7"
path = "src/bin/year2024_day7.rs"

[[bin]]
name = "year2024_day8"
path = "src/bin/year2024_day8.rs"

[[bin]]
name = "year2024_day9"
path = "src/bin/year2024_day9.rs"

[[bin]]
name = "year2024_day10"
path = "src/bin/year2024_day10.rs"

[package]
name = "aocsuite"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[dependencies.clap]
version = "4.5.4"
features = [ "derive",]
